--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
